  - Fixed the color palette problem when switching to
    graphic mode from mono mode. (Wengier)
  - Fixed full-screen TTF output may not fully cover
    the background screen in Linux. (Wengier)
  - Fixed that lines starting with "%" in [autoexec]
    section are being ignored. (Wengier)
  - Fixed issues with building the code with original
    MinGW using the ./build-mingw script. (Wengier)
  - IMGMOUNT now assumes the ISO type for .GOG/.INS
    files (which are equivalent to .CUE/.INS files)
    if no type is specified by the user. (Wengier)
  - Improved the dynamic core including the way its
    cache is allocated and to support dual mapping.
  - The FREECG98.BMP file (for PC-98 mode) is now
    rendered based on a unifont_jp TTF font instead
    of UnifontFullMediumMono.ttf. (roytam1)
  - Added support for automatic switching from TTF
    ouptut to another output in PC-98 mode, allowing
    Windows 3.1 to run in this mode. (Wengier)
  - Added OPL3Duo support, which passes OPL3 output
    to an OPL3Duo Arduino board with a specific
    configuration if desired. Set the config option
    "oplemu=opl3duoboard" to use it. (josephillips85)
0.83.8
  - Added support for scalable TrueType font (TTF)
    output for text-mode programs. Set "output=ttf"
    and optionally a monospaced TTF font (such as
    consola) with config option "ttf.font" to use it.
    Lines and columns can be specified with config
    options "ttf.lins" and "ttf.cols", and the cursor
    can be made blinking with the option "ttf.blinkc".
    The config options "ttf.ptsize" and "ttf.winperc"
    can be used to set the TTF font size and window
    percentage respectively. If you specify a TTF font
    size with "ttf.ptsize" then "ttf.winperc" will be
    ignored. You can also specify a word processor
    (WP=WordPerfect, WS=WordStar, XY=XyWrite) for the
    on-screen text-style and 512-character font (WP)
    features. When using the TTF output DOSBox-X will