@@ -170,6 +170,10 @@
     section are being ignored. (Wengier)
   - Fixed issues with building the code with original
     MinGW using the ./build-mingw script. (Wengier)
+  - Fixed option "output=ttf" not working properly with
+    -startui/startmapper command-line option. (Wengier)
+  - When the mouse is captured, the title bar will show
+    the shortcut to release the mouse. (Wengier)
   - IMGMOUNT now assumes the ISO type for .GOG/.INS
     files (which are equivalent to .CUE/.INS files)
     if no type is specified by the user. (Wengier)
